--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <div class="container forms">
-      <div class="form login" >
+      <div class="form login" id="btn">
         <div class="form-content">
           <header>WELCOME</header>
 
@@ -44,7 +44,7 @@
             </div>
 
             <div class="field button-field">
-              <button type="submit" id="btn" onclick="openpopUp()">
+              <button type="submit" onclick="openpopUp()">
                 Generate Certificate
               </button>
             </div>
