--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#03a9f5" />
+    <meta name="theme-color" content="#02022e" />
     <meta name="msapplication-navbutton-color" content="#02022e" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta
